manifests/ingress_grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.m1k.cloud
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: prometheus-operator-grafana
                port:
                  number: 80
            path: /
