manifests/ingress_prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: prometheus.m1k.cloud
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: prometheus-operated
                port:
                  number: 9090
            path: /
